@@ -1,6 +1,6 @@
 #MIN_CONFIG(3.2.0)
 
-AM_INIT_AUTOMAKE( [kthinkbat], [0.1.5_rc1] )
+AM_INIT_AUTOMAKE( [kthinkbat], [0.1.5_rc2] )
 AC_C_BIGENDIAN
 AC_CHECK_KDEMAXPATHLEN
 
