@@ -4,7 +4,7 @@ METASOURCES = AUTO
 lib_LTLIBRARIES = kthinkbat_panelapplet.la
 
 kthinkbat_panelapplet_la_SOURCES = kthinkbat.cpp batinfo.cpp batgauge.cpp \
-	kthinkbatconfig.kcfgc
+	kthinkbatconfig.kcfgc prefs.ui
 kthinkbat_panelapplet_la_LDFLAGS = -avoid-version -module $(all_libraries)
 kthinkbat_panelapplet_la_LIBADD = $(LIB_KDEUI) 
 
